# smcheck

./: .coverage  .gitignore  LICENSE  PATHS_auto.md  README.md  pyproject.toml
.github/workflows/: lint.yml  tests.yml
examples/order-processing/: .coverage  README.md  analysis.py  diagram.mmd  machine.py  main.py  sim.py
examples/order-processing/generated_tests/: test_paths.py  test_transitions.py
examples/order-processing/scenarios/: __init__.py  a_happy.py  b_out_of_stock.py  c_declined.py  d_timeout.py  e_pause_resume.py  f_shared_inv.py  g_partial_fulfillment.py  h_backorder_restock.py  i_stock_review_approve.py  j_stock_review_decline.py  k_ops_hold_release.py  l_ops_hold_cancel.py
generated_tests/: test_paths.py  test_transitions.py
smcheck/: __init__.py  __main__.py  cli.py  explainer.py  graph.py  mermaid.py  paths.py  report.py  statemachine_feature_catalogue.md  testgen.py  validator.py
tests/: conftest.py  test_cli.py  test_explainer.py  test_graph.py  test_graph_advanced.py  test_mermaid.py  test_paths.py  test_report.py  test_smcheck.py  test_testgen.py  test_validator.py
